[tool.poetry]
name = "vcnet-blind-image-inpainting"
version = "0.1.0"
description = ""
authors = ["DenizUgur <deniz343@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
glog = "==0.3.1"
plotly = "==4.11.0"
imageio = "==2.9.0"
scipy = "==1.5.0"
pandas = "==1.0.5"
yacs = "^0.1.8"
matplotlib = "==3.1.1"
scikit-image = "==0.16.2"
folium = "==0.11.0"
gpsphoto = "==2.2.3"
ImageHash = "==4.2.0"
Pillow = "==8.0.1"
scikit-learn = "==0.23.2"
opencv-python-headless = "<4.3"
torch = "^1.10.0"
torchvision = "^0.11.1"
rasterio = "^1.2.10"
tqdm = "^4.62.3"
kornia = "^0.6.1"
colorama = "^0.4.4"
numpy = "1.17"
wandb = "^0.12.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
